[package]
name = "backend-kit"
version = "0.0.2"
edition = "2021"
description = "Provides a set of tools and helpers for building backend services in Rust."
keywords = ["backend", "backend-service"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ukasyah-dev/backend-kit"

[dependencies]
thiserror = "2.0"
