[package]
name = "backend-kit"
version = "0.0.3"
edition = "2021"
description = "Provides a set of tools and helpers for building backend services in Rust."
keywords = ["backend", "backend-service"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ukasyah-dev/backend-kit"

[features]
http = ["axum", "serde", "serde_json", "tokio"]

[dependencies]
axum = { version = "0.8", features = ["macros"], optional = true }
log = "0.4"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
signal-hook = "0.3"
thiserror = "2.0"
tokio = { version = "1.43", optional = true }
validator = "0.20"
